Big update
Переписана реализация открытия окон.
Добавлен запуск на линукс(не проверен на работоспособность)
Убраны звуковые эффекты(Хз зачем вообще добавлял..)
Исправлены баги, переписано МНОГО кода.
Созданы классы констант, в соответствующем пакете.